Fix hidden search UI overlapping with page content

--- a/assets/_scss/search.scss
+++ b/assets/_scss/search.scss
@@ -11,6 +11,10 @@
     z-index: 0;
     opacity: 0;
     transition: opacity 0.3s ease-out;
+
+    #omnisearch-suggestions-container {
+        display: none;
+    }
 }
 
 nav.navbar-search {
@@ -21,6 +25,10 @@ nav.navbar-search {
     #search-container {
         opacity: 1;
         z-index: 1;
+
+        #omnisearch-suggestions-container {
+            display: block;
+        }
     }
 }
 
